# audio-decreaser

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
include/: adt-audio-compress.hpp  adt-audio-run.hpp  adt-audio-tools.hpp  adt-audio.hpp  adt-file-dialog.hpp  adt-file-tools.hpp  adt-flags.hpp  adt-icon.hpp  adt-interface-Iline.hpp  adt-interface-confirm.hpp  adt-interface-left-line.hpp  adt-interface-right-line.hpp  adt-interface-settings.hpp  adt-interface-top-line.hpp  adt-interface.hpp  adt-model.hpp  adt-paths.hpp  adt-service.hpp  adt-window.hpp  run-app.hpp
include/glad/: glad.h
lib/glad/: glad.c
model/: model.py
resource/: app_icon.rc
scripts/model/: fine-tune-encodec.ipynb  model-v2.py  model-v3.py
scripts/tools/: compare-audio.py  datasets-time-equal.py  split-datasets.py
src/: adt-audio-compress.cpp  adt-audio-run.cpp  adt-audio-tools.cpp  adt-audio.cpp  adt-file-dialog.cpp  adt-file-tools.cpp  adt-flags.cpp  adt-icon.cpp  adt-interface-confirm.cpp  adt-interface-left-line.cpp  adt-interface-right-line.cpp  adt-interface-settings.cpp  adt-interface-top-line.cpp  adt-interface.cpp  adt-model.cpp  adt-paths.cpp  adt-service.cpp  adt-window.cpp  adt.paths.cpp  main.cpp  run-app.cpp  using_new_clases_audio_tools_and_compress.cpp
